# cursetool-rs

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: database.rs  downloader.rs  main.rs  manifest_error.rs  model.rs  options.rs
