[package]
name = "cursetool-rs"
version = "0.1.0"
authors = ["Maxwell L-T <maxwell.lt@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
console = "0.14.0"
directories = "3.0.1"
lazy_static = "1.4.0"
log = "0.4.11"
md5 = "0.7.0"
rayon = "1.5.0"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.14"
sha2 = "0.9.2"
simplelog = "0.9.0"
structopt = "0.3.21"
urlencoding = "1.3.3"
zip = "0.5.13"

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.indicatif]
version = "0.15.0"
features = [ "rayon" ]

[dependencies.rusqlite]
version = "0.24.2"
features = [ "bundled" ]

[dev-dependencies]
tempfile = "3.1.0"
